# django_local_postgres_docker

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
a_core/: settings.py
a_home/: views.py
templates/: home.html
templates/includes/: header.html
