[project]
name = "django-local-postgres-docker"
version = "0.1.0"
description = "In this project, Django application run locally but the database postgres is running in a Docker container."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django==5.2.4",
    "django-allauth==65.9.0",
    "django-browser-reload==1.18.0",
    "django-cleanup==9.0.0",
    "django-htmx==1.23.2",
    "pillow==11.3.0",
    "psycopg2-binary>=2.9.10",
]
